fixing bug that caused tab icons to be misaligned

--- a/src/css/leftpanel.scss
+++ b/src/css/leftpanel.scss
@@ -59,8 +59,6 @@
 
     button[data-tip='documents'],
     button[data-tip='analysis'] {
-      display: flex;
-
       .yellow-alert {
         width: 5px;
         height: 5px;
